enterprise/operator/pkg/lb/testdata/lbfrontend_translation/16-https-tls-advanced/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-1
spec:
  backends:
    - ip: 172.18.0.5
      port: 8080
    - ip: 172.18.0.6
      port: 8080
  healthCheck:
    intervalSeconds: 30
    timeoutSeconds: 5
    healthyThreshold: 1
    unhealthyThreshold: 1
    minHealthyPercentage: 20
    http:
      host: lb
      path: /healthz
  tlsConfig:
    minTlsVersion: TLSv1_3
    maxTlsVersion: TLSv1_3
    allowedCipherSuites:
      - "[ECDHE-ECDSA-AES128-GCM-SHA256|ECDHE-ECDSA-CHACHA20-POLY1305]"
      - "[ECDHE-RSA-AES128-GCM-SHA256|ECDHE-RSA-CHACHA20-POLY1305]"
      - ECDHE-ECDSA-AES256-GCM-SHA384
      - ECDHE-RSA-AES256-GCM-SHA384
    allowedECDHCurves:
      - X25519
      - P-256
    allowedSignatureAlgorithms:
      - ecdsa_secp256r1_sha256
      - rsa_pss_rsae_sha256
      - rsa_pkcs1_sha256
      - ecdsa_secp384r1_sha384
      - rsa_pss_rsae_sha384
      - rsa_pkcs1_sha384
      - rsa_pss_rsae_sha512
      - rsa_pkcs1_sha512
      - rsa_pkcs1_sha1
