enterprise/operator/pkg/lb/testdata/lbfrontend_translation/16-https-tls-advanced/output-t2-ciliumenvoyconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  namespace: default
  name: lbfe-lb-1
spec:
  nodeSelector:
    matchLabels:
      service.cilium.io/node: t2
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socketAddress:
          address: 100.64.0.100
          portValue: 80
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                generateRequestId: false
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.health_check
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      clusterMinHealthyPercentages:
                        backend_cluster_https_0:
                          value: 20
                        backend_cluster_https_1:
                          value: 20
                      headers:
                        - name: :path
                          stringMatch:
                            exact: /health
                        - name: :method
                          stringMatch:
                            exact: GET
                        - name: user-agent
                          stringMatch:
                            prefix: cilium-probe/
                      passThroughMode: false
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                mergeSlashes: true
                normalizePath: true
                rds:
                  routeConfigName: frontend_routeconfig_http
                serverName: ilb
                statPrefix: frontend_listener_http
                useRemoteAddress: true
        - filterChainMatch:
            serverNames:
              - bar.acme.io
              - foo.acme.io
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                generateRequestId: false
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                mergeSlashes: true
                normalizePath: true
                rds:
                  routeConfigName: frontend_routeconfig_https
                serverName: ilb
                statPrefix: frontend_listener_https
                useRemoteAddress: true
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              commonTlsContext:
                alpnProtocols:
                  - h2
                  - http/1.1
                tlsCertificateSdsSecretConfigs:
                  - name: /default-test
                tlsParams:
                  cipherSuites:
                    - "[ECDHE-ECDSA-AES128-GCM-SHA256|ECDHE-ECDSA-CHACHA20-POLY1305]"
                    - "[ECDHE-RSA-AES128-GCM-SHA256|ECDHE-RSA-CHACHA20-POLY1305]"
                    - ECDHE-ECDSA-AES256-GCM-SHA384
                    - ECDHE-RSA-AES256-GCM-SHA384
                  ecdhCurves:
                    - X25519
                    - P-256
                  signatureAlgorithms:
                    - ecdsa_secp256r1_sha256
                    - rsa_pss_rsae_sha256
                    - rsa_pkcs1_sha256
                    - ecdsa_secp384r1_sha384
                    - rsa_pss_rsae_sha384
                    - rsa_pkcs1_sha384
                    - rsa_pss_rsae_sha512
                    - rsa_pkcs1_sha512
                    - rsa_pkcs1_sha1
                  tlsMaximumProtocolVersion: TLSv1_2
                  tlsMinimumProtocolVersion: TLSv1_2
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: cilium.bpf_metadata
          typedConfig:
            "@type": type.googleapis.com/cilium.BpfMetadata
      name: frontend_listener
      perConnectionBufferLimitBytes: 32768
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_http
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_https
      virtualHosts:
        - domains:
            - "foo.acme.io:80"
          name: frontend_virtualhost_https_0
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          routes:
            - match:
                prefix: /
              route:
                cluster: backend_cluster_https_0
        - domains:
            - "bar.acme.io:80"
          name: frontend_virtualhost_https_1
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          routes:
            - match:
                path: /api/test
              route:
                cluster: backend_cluster_https_1
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          noTrafficInterval: 30s
          timeout: 5s
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      name: backend_cluster_https_0
      perConnectionBufferLimitBytes: 32768
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsParams:
              cipherSuites:
                - "[ECDHE-ECDSA-AES128-GCM-SHA256|ECDHE-ECDSA-CHACHA20-POLY1305]"
                - "[ECDHE-RSA-AES128-GCM-SHA256|ECDHE-RSA-CHACHA20-POLY1305]"
                - ECDHE-ECDSA-AES256-GCM-SHA384
                - ECDHE-RSA-AES256-GCM-SHA384
              ecdhCurves:
                - X25519
                - P-256
              signatureAlgorithms:
                - ecdsa_secp256r1_sha256
                - rsa_pss_rsae_sha256
                - rsa_pkcs1_sha256
                - ecdsa_secp384r1_sha384
                - rsa_pss_rsae_sha384
                - rsa_pkcs1_sha384
                - rsa_pss_rsae_sha512
                - rsa_pkcs1_sha512
                - rsa_pkcs1_sha1
              tlsMaximumProtocolVersion: TLSv1_3
              tlsMinimumProtocolVersion: TLSv1_3
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          noTrafficInterval: 30s
          timeout: 5s
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      name: backend_cluster_https_1
      perConnectionBufferLimitBytes: 32768
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_https_0
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.5
                    portValue: 8080
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.6
                    portValue: 8080
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_https_1
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.7
                    portValue: 8080
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.8
                    portValue: 8080
